set illustration img height to auto trying to stop images from stretching on mobile

--- a/style.css
+++ b/style.css
@@ -55,6 +55,8 @@ border-style:solid;
 }
 
 
+
+
 .footercall, .logo{
     font-size:24px;
     font-weight:800;
@@ -141,11 +143,10 @@ button:hover{
     flex-direction: column;
     gap: 20px;
     text-align: left;
-    max-width:175px;
-
-   
-    
+    max-width:200px; 
 }
+
+.illustration img{height:auto;}
 
 
 
